# Quasar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  index.json  shell.nix
include/: crawler.h  html_parser.h  indexer.h
src/: crawler.cc  html_parser.cc  indexer.cc  main.cc
